--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -36,7 +36,7 @@
         {% block content %}{% endblock %}
     </main>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="{% static 'assets/js/vendor/jquery-3.6.4.min.js'%}"></script>
 	<script src="{% static 'assets/js/vendor/simplebar.min.js'%}"></script>
 	<script src="{% static 'assets/js/vendor/bootstrap.bundle.min.js'%}"></script>
