Add Sub categories implemented

--- a/ecommerce/templates/partials/sidebar.html
+++ b/ecommerce/templates/partials/sidebar.html
@@ -24,8 +24,8 @@
 											class="ri-checkbox-blank-circle-line"></i>Add Product</a></li>
 								<li><a href="{% url 'products:add_category' %}" class="cr-page-link drop"><i
 											class="ri-checkbox-blank-circle-line"></i>Add Category</a></li>
-								<li><a href="add-sub-category.html" class="cr-page-link drop"><i
-											class="ri-checkbox-blank-circle-line"></i>Add Sub Category</a></li>
+								<li> <a href="{% url 'products:add_subcategory' %}" class="cr-page-link drop">
+                                            <i class="ri-checkbox-blank-circle-line"></i>Add Sub Category</a></li>
 								<li><a href="order-list.html" class="cr-page-link drop"><i
 											class="ri-checkbox-blank-circle-line"></i>Order List</a></li>
 								<li class="cr-sb-item sb-subdrop-item">
