Add product page and functionality implemented

--- a/ecommerce/templates/partials/sidebar.html
+++ b/ecommerce/templates/partials/sidebar.html
@@ -20,7 +20,7 @@
 									class="ri-checkbox-blank-circle-line"></i>ecommerce</a></li>
 								<li><a href="{%  url 'products:products_list' %}" class="cr-page-link drop"><i
 											class="ri-checkbox-blank-circle-line"></i>Product list</a></li>
-								<li><a href="add-product.html" class="cr-page-link drop"><i
+								<li><a href="{% url 'products:add_product' %}" class="cr-page-link drop"><i
 											class="ri-checkbox-blank-circle-line"></i>Add Product</a></li>
 								<li><a href="{% url 'products:add_category' %}" class="cr-page-link drop"><i
 											class="ri-checkbox-blank-circle-line"></i>Add Category</a></li>
